--- a/index.html
+++ b/index.html
@@ -153,12 +153,16 @@
             list.innerHTML = workers.filter(w => w.name.toLowerCase().includes(search)).map(html).join('');
             savedList.innerHTML = workers.filter(w => savedIds.includes(w.id)).map(html).join('');
         }
+    </script>
 <script type="module">
-  // 1. Import the specific Firestore functions
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-  import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/12.7.0/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.7.0/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
 
-  // 2. Your actual config from Screenshot (18)
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
   const firebaseConfig = {
     apiKey: "AIzaSyAADHY0ZOZb6DbUyD3XcXMuLVNUivzP-Es",
     authDomain: "deepworkers-4405f.firebaseapp.com",
@@ -169,27 +173,32 @@
     measurementId: "G-T0GYNMK5G7"
   };
 
-  // 3. Initialize Firebase and Firestore
+  // Initialize Firebase
   const app = initializeApp(firebaseConfig);
-  const db = getFirestore(app);
+  const analytics = getAnalytics(app);
+</script>
+<script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/12.7.0/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.7.0/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
 
-  // 4. Update the save function to talk to your database
-  window.saveProfile = async function() {
-    const name = document.querySelector('input[placeholder="Full Name"]').value;
-    const phone = document.querySelector('input[placeholder="Phone Number (for Calls)"]').value;
-
-    try {
-      await addDoc(collection(db, "workers"), {
-        fullName: name,
-        phoneNumber: phone,
-        timestamp: new Date()
-      });
-      alert("Registration Successful and Permanent!");
-    } catch (e) {
-      console.error("Error: ", e);
-      alert("Error saving: " + e.message);
-    }
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyAADHY0ZOZb6DbUyD3XcXMuLVNUivzP-Es",
+    authDomain: "deepworkers-4405f.firebaseapp.com",
+    projectId: "deepworkers-4405f",
+    storageBucket: "deepworkers-4405f.firebasestorage.app",
+    messagingSenderId: "1043984625436",
+    appId: "1:1043984625436:web:278fb1e8afdb81636a94d9",
+    measurementId: "G-T0GYNMK5G7"
   };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
 </script>
 </body>
 </html>
