--- a/index.html
+++ b/index.html
@@ -164,36 +164,13 @@
   // Your web app's Firebase configuration
   // For Firebase JS SDK v7.20.0 and later, measurementId is optional
   const firebaseConfig = {
-    apiKey: "AIzaSyAADHY0ZOZb6DbUyD3XcXMuLVNUivzP-Es",
-    authDomain: "deepworkers-4405f.firebaseapp.com",
-    projectId: "deepworkers-4405f",
-    storageBucket: "deepworkers-4405f.firebasestorage.app",
-    messagingSenderId: "1043984625436",
-    appId: "1:1043984625436:web:278fb1e8afdb81636a94d9",
-    measurementId: "G-T0GYNMK5G7"
-  };
-
-  // Initialize Firebase
-  const app = initializeApp(firebaseConfig);
-  const analytics = getAnalytics(app);
-</script>
-<script type="module">
-  // Import the functions you need from the SDKs you need
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/12.7.0/firebase-app.js";
-  import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.7.0/firebase-analytics.js";
-  // TODO: Add SDKs for Firebase products that you want to use
-  // https://firebase.google.com/docs/web/setup#available-libraries
-
-  // Your web app's Firebase configuration
-  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-  const firebaseConfig = {
-    apiKey: "AIzaSyAADHY0ZOZb6DbUyD3XcXMuLVNUivzP-Es",
-    authDomain: "deepworkers-4405f.firebaseapp.com",
-    projectId: "deepworkers-4405f",
-    storageBucket: "deepworkers-4405f.firebasestorage.app",
-    messagingSenderId: "1043984625436",
-    appId: "1:1043984625436:web:278fb1e8afdb81636a94d9",
-    measurementId: "G-T0GYNMK5G7"
+    apiKey: "AIzaSyBN8klmDRbGDYdADQJq7yTevqW0Qln-7F8",
+    authDomain: "royalworker-bd745.firebaseapp.com",
+    projectId: "royalworker-bd745",
+    storageBucket: "royalworker-bd745.firebasestorage.app",
+    messagingSenderId: "555427807952",
+    appId: "1:555427807952:web:7ab7195f1b06d1928e94d5",
+    measurementId: "G-BV3ZKXE2R5"
   };
 
   // Initialize Firebase
